--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.0.10",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "react": "^18.2.0",
