--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.2",
     "@stripe/stripe-js": "^3.0.10",
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.9.0",
+    "jwt-decode": "^4.0.0",
     "primereact": "^10.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
